PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/Vonage_Integration_Data__mdt.object-meta.xml
<CustomObject>
    <description>Stores critical data neede for authentication with Vonage APIs</description>
    <label>Vonage Integration Data</label>
    <pluralLabel>Vonage Integrations Data</pluralLabel>
</CustomObject>