PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>