PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Google_NL_Api_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Google_NL_Api_Endpoint__c</fullName>
    <description>stores url for Google NL API endpoint</description>
    <label>Google NL Api Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>