PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Google_NL_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_NL_Api_Key__c</fullName>
    <description>stores APi key from Google NL API</description>
    <label>Google NL Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>