PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/JWT_token__c.field-meta.xml
<CustomField>
    <fullName>JWT_token__c</fullName>
    <description>stores JWT token used for the authentication</description>
    <label>JWT token</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>