PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Sms_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Sms_endpoint__c</fullName>
    <description>Vonage SMS APi endpoint url</description>
    <label>Sms endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>