PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Verify_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Verify_Endpoint__c</fullName>
    <description>vonage endpoint for verification API</description>
    <label>Verify Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>