PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Vonage_Api_Secret__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Api_Secret__c</fullName>
    <description>stores API secret</description>
    <label>Vonage Api Secret</label>
    <length>30</length>
    <type>Text</type>
</CustomField>