PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Vonage_calls_API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Vonage_calls_API_endpoint__c</fullName>
    <description>Vonage calls API endpoint url</description>
    <label>Vonage calls API endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>