PineApple_Vonage_Post_Call_Transcript/force-app/main/default/objects/Vonage_Integration_Data__mdt/fields/Vonage_Conversation_API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Conversation_API_endpoint__c</fullName>
    <description>Stores Vonage Conversation API endpoint URL</description>
    <label>Vonage Conversation API endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>